# rust-api-boilerplate

./: .gitignore  .sops.yaml  AGENTS.md  Cargo.toml  GEMINI.md  Readme.md  makefile  renovate.json  rustfmt.toml
.agents/skills/rust-axum-feature/: SKILL.md
.agents/skills/seaorm-schema/: SKILL.md
.agents/skills/sops-secrets/: SKILL.md
.agents/skills/utoipa-docs/: SKILL.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: build-staging.yaml  lint.yaml  ratchet.yaml  release.yaml  test.yaml
docs/sql/: init.sh
docs/sql/2025/: 000_schema.sql
env/: docker-compose.yaml
env/storage/mysql/data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
env/storage/mysql/data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
env/storage/mysql/data/kanban_db/: user.ibd
env/storage/mysql/data/mysql/: general_log_213.sdi  slow_log_214.sdi
env/storage/mysql/data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  (+91 more)
etc/cfg/: conf.local.enc.json  conf.production.enc.json  conf.staging.enc.json
etc/tpl/: conf.template.json
src/: api_doc.rs  main.rs
src/business/: mod.rs
src/business/domain/: card.rs  helper.rs  mod.rs  user.rs
src/business/entity/: auth.rs  card.rs  response.rs  user.rs  util.rs
src/business/usecase/: auth.rs  card.rs  mod.rs  user.rs
src/config/: app_settings.rs  creds.rs  database.rs  mod.rs
src/domain/: card.rs  helper.rs  mod.rs  user.rs
src/entity/: card.rs  error.rs  general.rs  mod.rs  response.rs  user.rs  util.rs
src/handler/: api_doc.rs  card.rs  mod.rs  route.rs  user.rs  util.rs
src/handler/http/: mod.rs
src/handler/http/doc/: api_doc.rs  mod.rs
src/handler/http/middleware/: auth.rs  context.rs
src/handler/http/rest/: card.rs  mod.rs  route.rs  user.rs  util.rs
src/helper/: logger.rs  mod.rs  password.rs
src/middleware/: auth.rs  context.rs
src/state/: mod.rs
src/types/: response.rs
src/usecase/: auth.rs  card.rs  mod.rs  user.rs  util.rs
src/usecase/rest/: route.rs
utils/: Dockerfile
(+8 files in other folders)
