[package]
name = "gemini-assisted-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "=0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand_core = { version = "0.9.5", features = ["std"] }
sea-orm = { version = "1.1.19", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "=2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "=1.19.0", features = ["serde", "v4"] }
