[package]
name = "rust-api-boilerplate"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "=0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand_core = { version = "0.10.1", features = ["std"] }
sea-orm = { version = "1.1.20", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "mock"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "=2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "=1.23.1", features = ["serde", "v4"] }

[dev-dependencies]
mockall = "0.14.0"
